--- a/smart contracts/package.json
+++ b/smart contracts/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "@openzeppelin/contracts": "^4.1.0",
     "@openzeppelin/contracts-upgradeable": "^4.1.0",
+    "dotenv": "^9.0.0",
     "web3": "^1.3.5"
   },
   "devDependencies": {},
